examples/valid/program10.c
int main(void) {
    int x;
    int y;
    x = 5;
    y = 10;
    if (x < y) {
        return 1;
    } else {
        return 0;
    }
}

