examples/invalid/program33.c
int main(void) {
    int x;
    x = 5;
    if (x > 0) {
        int y;
        y = 10;
    }
    y = 20;
    return y;
}

